# openscad-hydra

./: Cargo.toml  demo.cast  flake.nix  label.3mf  label.scad  settings.json
src/: main.rs  settings.rs
