[package]
name = "openscad-hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
cargo-util = "0.2.12"
clap = { version = "4.5.8", features = ["derive"] }
filepath = "0.1.2"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["alloc", "derive"] }
serde_json = { version = "1.0.120", features = ["alloc", "preserve_order"] }
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.0"
